--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: clojure
 lein: lein2
-script: cd prototype && lein install && lein test
+script: lein install && lein test
 
 notifications:
   slack:
